#2007 Actualitzar els plugins i dependències per JBoss 7.2
- Corregint integració amb plugin de dades d'usuari keycloak